--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ classifiers = [
 dependencies = [
   "colorama; platform_system == 'Windows'",
   "threemystic-common >= 0.0.3",
+  "polling2 >= 0.5.0",
   "boto3 >= 1.21.41",
   "typing-extensions >= 4.4.0"
 ]
