--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,8 +29,15 @@ dependencies = [
   "colorama; platform_system == 'Windows'",
   "threemystic-common >= 0.0.3",
   "polling2 >= 0.5.0",
-  "boto3 >= 1.21.41",
-  "typing-extensions >= 4.4.0"
+  "typing-extensions >= 4.4.0",
+  "boto3 >= 1.26.151",
+  "botocore >= 1.29.151",
+  "azure-common >= 1.1.28",
+  "azure-cli >= 2.49.0",
+  "azure-identity >= 1.13.0",
+  "azure-mgmt-subscription >= 3.1.1",
+  "azure-mgmt-managementgroups >= 1.0.0",
+  "azure-mgmt-resourcegraph >= 8.0.0"
 ]
 dynamic = ["version"]
 
