--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,8 @@ dependencies = [
   "azure-identity >= 1.13.0",
   "azure-mgmt-subscription >= 3.1.1",
   "azure-mgmt-managementgroups >= 1.0.0",
-  "azure-mgmt-resourcegraph >= 8.0.0"
+  "azure-mgmt-resourcegraph >= 8.0.0",
+  "azure-mgmt-sql >= 3.0.1",
 ]
 dynamic = ["version"]
 
