--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,8 @@ dependencies = [
   "threemystic-common >= 0.1.3",
   "polling2 >= 0.5.0",
   "typing-extensions >= 4.4.0",
+  "PyJWT >= 2.7.0",
+  "cryptography >= 41.0.1",
   "boto3 >= 1.26.151",
   "botocore >= 1.29.151",
   "azure-common >= 1.1.28",
