--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [
   "threemystic-common >= 0.1.4",
   "polling2 >= 0.5.0",
   "typing-extensions >= 4.4.0",
+  "pyopenssl >= 22.1.0",
   "PyJWT >= 2.7.0",
   "cryptography >= 41.0.1",
   "boto3 >= 1.26.151",
