--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,21 +28,19 @@ classifiers = [
 ]
 dependencies = [
   "colorama; platform_system == 'Windows'",
-  "threemystic-common >= 0.1.18",
+  "threemystic-common >= 0.1.19",
   "polling2 >= 0.5.0",
-  "typing-extensions >= 4.4.0",
-  "pyopenssl >= 22.1.0",
-  "PyJWT >= 2.7.0",
-  "cryptography >= 41.0.1",
-  "boto3 >= 1.28.15",
-  "botocore >= 1.31.16",
-  "azure-common >= 1.1.28",
-  "azure-cli >= 2.52.0",
-  "azure-identity >= 1.13.0",
-  "azure-mgmt-subscription >= 3.1.1",
-  "azure-mgmt-managementgroups >= 1.0.0",
-  "azure-mgmt-resourcegraph >= 8.0.0",
-  "azure-mgmt-sql >= 3.0.1",
+  "typing-extensions >= 4.15.0",
+  "pyopenssl >= 25.3.0",
+  "PyJWT >= 2.10.0",
+  "cryptography >= 46.0.0",
+  "boto3 >= 1.40.53",
+  "botocore >= 1.40.53",
+  "azure-cli >= 2.78.0",
+  "azure-identity >= 1.25.0",
+  "azure-mgmt-resource >= 23.0.0",
+  "azure-mgmt-costmanagement >= 4.0.0",
+  "azure-mgmt-resourcegraph >= 8.0.0"
 ]
 dynamic = ["version"]
 
